[package]
name          = "libxid"
version       = "0.1.4"
authors       = ["Jérôme Renard <jeromer@fastmail.net>"]
edition       = "2021"
license       = "MIT"
description   = "Package xid is a globally unique id generator library. It's a Rust port of https://github.com/rs/xid"
homepage      = "https://github.com/jeromer/libxid"
repository    = "https://github.com/jeromer/libxid"
documentation = "https://docs.rs/libxid/"
readme        = "README.md"

[dependencies]
rand          = "0.8.5"
gethostname   = "0.4.1"
md5           = "0.7.0"
crc32fast     = "1.3.2"
byteorder     = "1.4.3"
serde         = { version = "1.0.152", features = ["derive"] }
serde_json    = "1.0.91"
thiserror = "1.0.38"
